llvm/test/tools/llubi/unsupported_constant.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
  %res = add i32 0, undef
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   %res = add i32 0, undef at @main <stdin>:5
; CHECK-NEXT: Error: Unsupported constant: i32 undef.
; CHECK-NEXT: error: Execution of function 'main' failed.
